:bug: Correct animations overflow

--- a/frontend/resources/styles/main/partials/viewer.scss
+++ b/frontend/resources/styles/main/partials/viewer.scss
@@ -20,11 +20,16 @@
   overflow: auto;
 
   & .viewer-wrapper {
+    position: relative;
+  }
+
+  & .viewer-clipper {
     display: grid;
     grid-template-rows: 1fr;
     grid-template-columns: 1fr;
     justify-items: center;
     align-items: center;
+    overflow: hidden;
 
     .empty-state {
       justify-content: center;
